--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -115,3 +115,57 @@ main #container .container {
     margin: auto;
     padding: 0 10px;
 }
+
+footer {
+    background: var(--blue);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 200px;
+    margin-top: 30px;
+    padding: 15px;
+}
+
+footer .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    width: 100%;
+    max-width: var(--max-width);
+    gap: 15px;
+}
+
+footer .container > * {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+footer .container .image-container {
+    height: 100px;
+}
+
+footer .container .image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+footer .container .col ul {
+    list-style: none;
+}
+
+footer .container .col ul li a {
+    color: white;
+    text-decoration: none;
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    /* justify-content: center; */
+    font-size: 18px;
+}
+
+footer .container .col ul li h5 {
+    font-size: 24px;
+    color: white;
+}
